<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_y_b_t_u"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/startDate"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/startDate"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/ng_y_b_t_u_dd_mm_yyyy"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="#181C1F"
        android:textColorHint="#A4ABB2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/dpStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStartDate" />

    <ImageButton
        android:id="@+id/dpStartDate"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@id/startDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/startDate"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gi_b_t_u"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/startDate"
        app:layout_constraintTop_toBottomOf="@id/startDate" />

    <EditText
        android:id="@+id/startTime"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/gi_b_t_u_hh_mm_ss"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textColor="#181C1F"
        android:textColorHint="#A4ABB2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tpStartTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStartTime" />

    <ImageButton
        android:id="@+id/tpStartTime"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/ic_clock_nav"
        app:layout_constraintBottom_toBottomOf="@id/startTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/startTime"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ng_y_k_t_th_c"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/startDate"
        app:layout_constraintTop_toBottomOf="@id/startTime" />

    <EditText
        android:id="@+id/endDate"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/ng_y_k_t_th_c_dd_mm_yyyy"
        android:inputType="date"
        android:textColor="#181C1F"
        android:textColorHint="#A4ABB2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/dpEndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEndDate"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/dpEndDate"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@id/endDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/endDate"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gi_k_t_th_c"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/startDate"
        app:layout_constraintTop_toBottomOf="@id/endDate" />

    <EditText
        android:id="@+id/endTime"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/gi_k_t_th_c_hh_mm_ss"
        android:inputType="time"
        android:textColor="#181C1F"
        android:textColorHint="#A4ABB2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tpEndTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEndTime"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/tpEndTime"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:scaleType="fitXY"
        android:src="@drawable/ic_clock_nav"
        app:layout_constraintBottom_toBottomOf="@id/endTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/endTime"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/calculateDiff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_bg_btn_cal"
        android:text="@string/t_nh_ch_nh_l_ch"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/endTime" />

    <TextView
        android:id="@+id/resultDiff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/k_t_qu"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/calculateDiff" />

</androidx.constraintlayout.widget.ConstraintLayout>
